--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,1 +1,3 @@
-<%= react_component("PropertyList", { properties: @properties }) %>
+<%= react_component("PropertyList", { properties: @properties, total_count: @properties.total_count }) %>
+
+<%= paginate @properties %>
